# py_package_generator

./: .gitignore  README.adoc  create_new_package.py  generate_package_structure.py
gui_plugin/: README.adoc  README.md  pyproject.toml  run_{my_package}.py  setup.cfg
gui_plugin/src/{my_package}/: gui.py  main.py
gui_plugin/{my_package}/: gui.py  main.py
ini_file_plugin/: pyproject.toml  setup.cfg  utils.py
ini_file_plugin/<my_package>/: config.py  configspec.ini
ini_file_plugin/{my_package}/: config.py
model_package/: .gitlab-ci.yml  README.adoc  README.md  pyproject.toml  setup.cfg  setup.py
model_package/<my_package>/: __init__.py  utils.py
model_package/src/{my_package}/: __init__.py  utils.py
model_package/{my_package}/: __init__.py  utils.py
