[metadata]
name = {my_package}
version = attr: {my_package}.__version__
description = ""
url = ""
author = ""
author_email = ""

[options.data_files]
* =
    README.adoc

[options]
include_package_data = True
setup_requires = setuptools_scm
packages = find:
python_requires = >=3.7
install_requires =
    pytest
    setuptools