[metadata]
name = {my_package}
version = attr: {my_package}.__version__
description = ""
url =
author = ""
author_email = ""
platforms = ["Linux", "Mac OS X"]
license_files = LICENSE.txt

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    pytest
    setuptools